# mips-compiler

./: .gitignore  CMakeLists.txt  README.md
01_grammatishe_auslegung/: testfile4.txt
04_error_handling/: main.cpp
05_mips_compile/: error.cpp  midcode_generator.cpp  mips_generator.cpp  mips_generator.h  parse_analyser.cpp
document/: 文法说明.docx
file/: midcode.txt  mips.txt
homework/: lexical.c
homework/error/: error.sln  lexical_analyser.h  parse_analyser.h
homework/grammatishe/: testfile1.txt  testfile2.txt  testfile3.txt  testfile5.txt
homework/lexical/: lexical.cpp  lexical.sln
homework/mips/: error.sln  mips.sln
homework/mips/mips/: reg.h  (+34 more)
homework/parse/: lexer.cpp  parse.sln  parser.cpp
include/: error.h  error_handing.h  instr.h  lexical_analyser.h  midcode.h  midcode_generator.h  mips_generator.h  objcode.h  parse_analyser.h  reg.h  symbol.h  syntax_node.h  table.h
project/error/: error_handing.h  symbol_table.h
project/error_handling/: lexical_analyser.cpp
project/mips/: mips.sln
project/mips_compile/: instr.cpp  main.cpp  midcode.cpp  midcode.h  midcode_generator.h  mips_generator.cpp  mips_generator.h  objcode.cpp  parse_analyser.cpp  parse_analyser.h  reg.cpp  symbol.h
project/parse/: main.cpp  syntax_node.h
project/syntax_analysis/: lexer.h
src/: Makefile  error.cpp  error_handing.cpp  error_handing.h  instr.cpp  instr.h  lexical_analyser.cpp  lexical_analyser.h  main.cpp  midcode.cpp  midcode_generator.cpp  mips_generator.cpp  objcode.cpp  parse_analyser.cpp  parse_analyser.h  reg.cpp  symbol.cpp  syntax_node.cpp  table.cpp
(+53 files in other folders)
