CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(mips_compiler)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g")
SET(CMAKE_CXX_FLAGS "-std=c++11")

INCLUDE_DIRECTORIES(include)

AUX_SOURCE_DIRECTORY(src SRC_DIR)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(mips_compiler ${SRC_DIR})
